gel-single-process/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: gel
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gateway
  template:
    metadata:
      labels:
        name: gateway
    spec:
      containers:
        - name: gateway
          args:
            - -config.file=/etc/gel/config.yaml
            - -target=gateway
          image: grafana/enterprise-logs:v1.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3100
              name: http
            - containerPort: 9095
              name: grpc
            - containerPort: 7946
              name: gossip
          readinessProbe:
            httpGet:
              path: /ready
              port: 3100
            initialDelaySeconds: 15
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/gel
              name: gel-config
            - mountPath: /etc/gel/license
              name: gel-license
      volumes:
        - name: gel-config
          configMap:
            name: gel-config
        - name: gel-license
          secret:
            secretName: gel-license
  updateStrategy:
    type: RollingUpdate
