gel-single-process/gel-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gel
  namespace: gel
spec:
  replicas: 3
  selector:
    matchLabels:
      name: gel
  serviceName: gel-headless
  template:
    metadata:
      labels:
        name: gel
    spec:
      containers:
        - name: gel
          args:
            - -config.file=/etc/gel/config.yaml
            - -target=all
          image: grafana/enterprise-logs:v1.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3100
              name: http
            - containerPort: 9095
              name: grpc
            - containerPort: 7946
              name: gossip
          readinessProbe:
            httpGet:
              path: /ready
              port: 3100
            initialDelaySeconds: 15
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /etc/gel
              name: gel-config
            - mountPath: /etc/gel/license
              name: gel-license
      terminationGracePeriodSeconds: 300
      volumes:
        - name: gel-config
          configMap:
            name: gel-config
        - name: gel-license
          secret:
            secretName: gel-license
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
