gel-single-process/compactor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compactor-discovery
  namespace: gel
spec:
  clusterIP: None
  ports:
    - name: gel-grpc
      port: 9095
      targetPort: grpc
    - name: gel-gossip
      port: 7946
      targetPort: gossip
  publishNotReadyAddresses: true
  selector:
    name: compactor
---
apiVersion: v1
kind: Service
metadata:
  name: compactor
  namespace: gel
spec:
  ports:
    - name: gel-http
      port: 9000
      targetPort: http
  selector:
    name: compactor
  sessionAffinity: None
  type: ClusterIP
