gel-single-process/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gel-discovery
  namespace: gel
spec:
  clusterIP: None
  ports:
    - name: gel-grpc
      port: 9095
      targetPort: grpc
    - name: gel-gossip
      port: 7946
      targetPort: gossip
  publishNotReadyAddresses: true
  selector:
    name: gel
---
apiVersion: v1
kind: Service
metadata:
  name: gel
  namespace: gel
spec:
  ports:
    - name: gel-http
      port: 3100
      targetPort: http
  selector:
    name: gel
  sessionAffinity: None
  type: ClusterIP
